--- a/block_1_session_1_classopen.qmd
+++ b/block_1_session_1_classopen.qmd
@@ -19,7 +19,7 @@ footer: "Hacking for Science by Dr. Matthias Bannert is licensed under [CC BY-NC
 :::
 
 
-## Markdown / Quarto {.center}
+## [Markdown / Quarto](https://quarto.org/docs/guide/) {.center}
 
 ## AI Integration {.center}
 
