--- a/block_1_session_1_classopen.qmd
+++ b/block_1_session_1_classopen.qmd
@@ -166,7 +166,7 @@ plot(q)
 ## Example Benchmark: [Create a Production Pipeline](https://github.com/h4sci/h4sci-gha-demo) {.center}
 
 
-## Invidual Introduction {.center}
+## Individual Introductions {.center}
 
 
 
