--- a/block_2_session_1_r_programming.qmd
+++ b/block_2_session_1_r_programming.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Hacking for Science"
 subtitle: "Block 2, Session 1: R Programming 101"
-author: "Matt Bannert ([@whatsgoodio](https://twitter.com/whatsgoodio))"
+author: "Matt Bannert"
 format: revealjs
 chalkboard: true
 echo: true
