--- a/index.qmd
+++ b/index.qmd
@@ -18,6 +18,13 @@ footer: "Hacking for Science by Dr. Matthias Bannert is licensed under [CC BY-NC
 
 [Block 1, Session 4: Git 101](block_1_session_4_git_101.html)
 
+
+[Block 2, Session 1: R Programming 101](block_2_session_1_r_programming.html)
+
+[Block 2, Session 2: Programming with data](block_2_session_2_programming_w_data.html)
+
+
+
 <!--
 
 
