--- a/block_3_session_2_infra_for_team_projects.qmd
+++ b/block_3_session_2_infra_for_team_projects.qmd
@@ -36,7 +36,7 @@ font-size:.7em;
 ## Examples {.center}
 
 - **personal repository page**: [mbannert.github.io/timeseriesdb](https://mbannert.github.io/timeseriesdb)
-- **organization repository page**: [devops-carpentry.github.io/book](https://devops-carpentry.github.io/book)
+- **organization repository page**: [https://rse-book.github.io/](https://rse-book.github.io/)
 - **organization page**: [h4sci.github.io](https://h4sci.github.io)
 
 
@@ -66,7 +66,7 @@ the URL pattern is: user.github.io/repository-name
 
 - Prepare a task you want to run, e.g., an R script.
 - Configure an environment AND workflow in a simple .yaml text file
-- Push the file to a hidden folder .github/workflows (this won't be necessary if you edited the file directly on github0
+- Push the file to a hidden folder .github/workflows (this won't be necessary if you edited the file directly on GitHub
 - Use the GitHub web GUI to monitor the process.
 
 
@@ -247,17 +247,6 @@ dashboardPage(
 
 ## Are you ready for to build a real app? {.center}
 
-[Take the official quiz by rstudio.com!](https://shiny.rstudio.com/tutorial/quiz/)
-
-
-
-## Mastering Shiny
-
-
-![https://twitter.com/hadleywickham/status/1329498817113321472](img/hadley.png)
-
-
-
 
 
 ## More Shiny Resources {.smaller}
@@ -271,7 +260,8 @@ dashboardPage(
 ### UIs / Gallery
 
 - [Shiny Gallery](http://shiny.rstudio.com/gallery/)
-- [Semantic UI (advanced)](https://github.com/Appsilon/shiny.semantic)
+- [RInterface](https://rinterface.com/) and [Unleash Shiny](https://unleash-shiny.rinterface.com/)
+- [bslib](https://rstudio.github.io/bslib/)
 
 
 ### Advanced Reads
